# RTInference

./: .gitignore  CMakeLists.txt
cmake/: FindCaffe.cmake  FindGlog.cmake
include/: Viewer.hpp  inference.hpp  preprocess.hpp  utilities.hpp
src/: CMakeLists.txt  Viewer.cpp  inference.cpp  preprocess.cpp
tools/: CMakeLists.txt  inference.cpp  main.cpp
